<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hakoniwa_turtlebot3</name>
  <version>0.0.1</version>
  <description>
    ROS 2 packages for TurtleBot3
  </description>
  <maintainer email="fukuta_tatsuya@intec.co.jp">ubuntu</maintainer>
  <license>Apache2</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>hakoniwa_turtlebot3_rviz</exec_depend>
  <exec_depend>hakoniwa_turtlebot3_description</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>